Added cart app and cart templates/cart.html

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -16,7 +16,7 @@
                     <div class="input-group">
                         <input name="quantity" type="number" min="1" max="50" class="form-control" placeholder="Quantity">
                         <span class="input-group-btn">
-                            <button class="btn btn-success" type="submit">Add To Cart</button>
+                            <button class="btn btn-warning" type="submit">Add To Cart</button>
                         </span>
                     </div>
                 </form>
