--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -2,26 +2,29 @@
 
 {% block content %}
 <div class="row row-flex">
+    
     {% for product in products %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
-                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4">
+            <div class="card card-body">
+                <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <!-- <p class="product-description">{{ product.description }}</p> -->
+                    <p class="card-text">{{ product.price }}</p>
 
-                <h3>{{ product.name }}</h3>
-                <p class="product-description">{{ product.description }}</p>
-                <p>{{ product.price }}</p>
+                        <a href="#" class="btn btn-primary col-sm-6">More Info</a>
 
-                <form method="post" action="{% url 'add_to_cart' product.id %}">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="50" class="form-control" placeholder="Quantity">
-                        <span class="input-group-btn">
-                            <button class="btn btn-warning" type="submit">Add To Cart</button>
-                        </span>
-                    </div>
-                </form>
+                    <form method="post" action="{% url 'add_to_cart' product.id %}">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input name="quantity" type="number" min="1" max="50" class="form-control" placeholder="Quantity">
+                            <span class="input-group-btn">
+                                <button class="btn btn-warning" type="submit">Add To Cart</button>
+                            </span>
+                        </div>
+                    </form>
             </div>
         </div>
-    {% endfor %}
+     {% endfor %}
+    
 </div>
 {% endblock %}
