Added checkout app. Added stripe.js. Apps enhancement. e.g added urls, functions for product description, removing font-awesome.

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -11,8 +11,8 @@
                     <!-- <p class="product-description">{{ product.description }}</p> -->
                     <p class="card-text">{{ product.price }}</p>
 
-                        <a href="#" class="btn btn-primary col-sm-6">More Info</a>
-
+                        <a href="{% url 'description' %}" class="btn btn-primary col-sm-6">More Info</a>
+                    <hr>
                     <form method="post" action="{% url 'add_to_cart' product.id %}">
                         {% csrf_token %}
                         <div class="input-group">
