--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -15,32 +15,33 @@
         <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
         
         <div class="card card-body">
-            <div class="card-title"><h3>{{ item.product.name }}</h3></div>
+            <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+            <h3 class="card-title">{{ item.product.name }}</h3>
             <!-- <p class="product-description">{{ item.product.description }}</p> -->
             <p class="card-text">{{ item.product.price }}</p>
-            <p>
+            <p class="card-text">Quantity: {{item.quantity}}</p>
                 
                 <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="exampleInputAmount" class="sr-only">New Quantity</label>
                         <div class="input-group">
-                            <div class="input-group-addon">Quantity</div>
+                            <div class="input-group-addon">Enter New Quantity: </div>
                             <input name="quantity" type="number" min="0" max="50" class="form-control">
-                            <div class="input-group-addon">{{item.quantity}}</div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-secondary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Edit</button>
+                    <button type="submit" class="btn btn-secondary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
                 </form>
             </p>
         </div>
     </div>
     {% endfor %}
 </div>
+<hr>
 <!-- Checkout -->
 <div class="row">
     <p>Total: <span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="/" class="btn btn-warning" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+    <a href="{% url 'checkout' %}" class="btn btn-warning" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
 </div>
 
 {% endblock %}
