--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,4 +1,6 @@
 {% autoescape off %}
+Hi there,
+
 You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.
 
 Please go to the following page and choose a new password:
@@ -9,7 +11,7 @@ Please go to the following page and choose a new password:
 
 Your username, in case you've forgotten: {{ user.username }}
 
-Thanks for using our site!
+Thanks for using our iShop!
 
 The {{ site_name }} team.
 
