--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -12,13 +12,12 @@
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4">
         
         <!-- Show all product that only in the cart item -->
-        <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+        <div  style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
         
         <div class="card card-body">
             <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
             <h3 class="card-title">{{ item.product.name }}</h3>
-            <!-- <p class="product-description">{{ item.product.description }}</p> -->
-            <p class="card-text">{{ item.product.price }}</p>
+            <p class="card-text">${{ item.product.price }}</p>
             <p class="card-text">Quantity: {{item.quantity}}</p>
                 
                 <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
@@ -40,8 +39,8 @@
 <hr>
 <!-- Checkout -->
 <div class="row">
-    <p>Total: <span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="{% url 'checkout' %}" class="btn btn-warning" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+    <p>Total: <span class="glyphicon glyphicon-euro" aria-hidden="true"></span>${{ total }}</p><br><hr>
+    <a href="{% url 'checkout' %}" class="btn btn-warning" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a></br></hr>
 </div>
 
 {% endblock %}
