--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -5,6 +5,7 @@
 {% load bootstrap_tags %}
 
 {% block head_js %}
+
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script type="text/javascript">
     //<![CDATA[
@@ -19,13 +20,12 @@
     {% for item in cart_items %}
         <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display card">
             <div class="card-body">
-                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+                <div style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
 
                 <div class="caption">
                     <h3>{{ item.product.name }}</h3>
-                    <p class="product-description">{{ item.product.descriptio }}</p>
                     <p>{{ item.quantity }}</p>
-                    <p>item.product.price</p>
+                    <p>{{item.product.price}}</p>
                 </div>
             </div>
         </div>
