--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,18 @@ body {
     border-radius: 9px;
 }
 
-/* Product image */
+/*-------------------------------------------- images */
+
+.img{
+  width: 100%;
+  height: 50%;
+  background-image: url('../../static/images/tech.jpg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  margin: 0 auto 40px;
+}
+
 .product-image {
     background-size: contain;
     background-position: center center;
@@ -23,4 +34,12 @@ body {
     width: 150px;
     height: 150px;
     margin: 0 auto;
+}
+
+/*-------------------------------------------- footer */
+
+footer{
+    margin-top: 3em;
+    height: 20%;
+    background-color: lightgray;
 }
