--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>iShop</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}" type="text/css" /> -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
-    {% block head_js %}
-    <!-- Inject this into base.html only when checkout is clicked -->
-    {% endblock head_js %}
 </head>
 
 <body>
@@ -46,11 +42,12 @@
             {% endif %}
             <!-- Cart -->
             <li>
-                <a href="{% url 'view_cart' %}"></a>
+                <a href="{% url 'view_cart' %}">
                     <i class="fa fa-shipping-cart"></i> cart
                     {% if product_count > 0 %}
-                    <label class="badge badge-warning">{{ product_count }}</label>
+                     <label class="badge badge-warning">{{ product_count }}</label>
                     {% endif %}
+                </a>   
             </li>
             </ul>
             <!-- Search -->
@@ -61,7 +58,8 @@
         </div>
     </nav>
       <h1>
-        {% block page_heading %}{% endblock %}
+        {% block page_heading %}
+        {% endblock %}
     </h1>
 
     {% if messages %}
@@ -72,12 +70,20 @@
     </div><br>
     {% endif %} 
     <div class="container">
-    <!-- main area for our project -->
-        {% block content %}{% endblock %}
+    {% block content %}
+    <!-- main area for iShop project -->
+    {% endblock %}
     </div>
+    <footer>
+          <div>
+            <div class="container">
+            </div>
+          </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
+    {% block head_js %}
+    <!-- Inject this into base.html only when checkout is clicked -->
+    {% endblock head_js %}
 </body>
 </html>
