New pages and Style.
Added product_view.html page to give user more information about the selected product with it's view function and url.
Added footer with it's style in base.html
Added block title cross page to display on browser tap.
Modified product models.py to include slug unique field.
Removed add to cart form from products.html and more_products.html and including it in the new created page product_view.html

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -2,6 +2,8 @@
 
 {% load bootstrap_tags %}
 
+{% block title %}Login{% endblock %}
+
 {% block page_title %}Login Page{% endblock %} 
  
 {% block page_heading %}Login{% endblock %}
@@ -9,6 +11,7 @@
 {% block content %}
     <form method="POST">
         {% csrf_token %}
+        <p>You must be login to view your cart!</p>
         {{ login_form | as_bootstrap}}
         <button type="submit" class="btn btn-outline-primary">Login</button>
     </form>
