--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -2,6 +2,8 @@
 
 {% load bootstrap_tags %}
 
+{% block title %}Registration{% endblock %}
+
 {% block page_title %}Registration Page{% endblock %} 
  
 {% block page_heading %}Please Register here!{% endblock %}
