--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -4,6 +4,8 @@
 
 {% load bootstrap_tags %}
 
+{% block title %}checkout{% endblock %}
+
 {% block head_js %}
 
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
