--- a/products/templates/more_products.html
+++ b/products/templates/more_products.html
@@ -1,27 +1,19 @@
 {% extends 'base.html' %}
 
+{% block title %}Products{% endblock %}
+
 {% block content %}
 <div class="row row-flex">
     
     {% for product in products %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4">
-            <div class="card card-body">
-                <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <p class="product-description">{{ product.description }}</p>
-                    <p class="card-text">${{ product.price }}</p>
-
-                    <hr>
-                    <form method="post" action="{% url 'add_to_cart' product.id %}">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input name="quantity" type="number" min="1" max="50" class="form-control" placeholder="Quantity">
-                            <span class="input-group-btn">
-                                <button class="btn btn-warning" type="submit">Add To Cart</button>
-                            </span>
-                        </div>
-                    </form>
-            </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <a href='/products/{{ product.slug }}'>
+                <div class="card card-body">
+                    <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+                        <h5 class="card-title">{{ product.name }}</h5>
+                        <p class="card-text">${{ product.price }}</p>
+                </div>
+            </a>
         </div>
      {% endfor %}
 
