--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,25 +2,35 @@
 
 {% block page_title %}Password Reset Page{% endblock %}
 
-{% block page_heading %}Reset Password{% endblock %}
-
 {% block content %}
+<div class="background-img">
+    <div class="d-flex">
+        <div class="row m-auto">
+            <div class="card card-signin my-5 col-sm-12">
+                <div class="card-body mt-4">
+                    <div class="col-sm-12">
+                        <h5 class="card-title text-center text-uppercase mt-3 mb-3 text-danger">password reset</h5>
+                            <form method="post">
 
-<form method="post">
+                                <p>Please enter your email address to start resetting your password!</p>
 
-    <p>Please enter your email address to start resetting your password!</p>
+                                <div style="display:none">
+                                    <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+                                </div>
 
-    <div style="display:none">
-        <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+                                {{ form.email.errors }}
+
+                                <p>
+                                    <label for="id_email" class="control-label required-field">E-mail address: </label>
+                                    {{ form.email }} 
+                                    <button type="submit" value="Reset password">Reset Password</button>
+                                </p>
+                            </form>
+                            </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-     {{ form.email.errors }}
-
-    <p>
-        <label for="id_email" class="control-label required-field">E-mail address: </label>
-        {{ form.email }} 
-        <button type="submit" value="Reset password">Reset Password</button>
-     </p>
-</form>
+</div>
 
 {% endblock %}
