--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -4,11 +4,27 @@
 
 {% block page_title %}{{ user }}'s Profile{% endblock %} 
 
-{% block page_heading %}{{ user }}'s Profile{% endblock %} 
-
 {% block content %}
 
-<p>{{ profile.email }}</p>
-<p>Hi! {{ profile.username }}</p>
+<div class="background-img">
+    <div class="d-flex">
+        <div class="row m-auto">
+            <div class="card card-signin my-5 col-sm-12">
+                <div class="card-body mt-4">
+                    <div class="col-sm-12">
+                        <h1 class="card-title text-center text-capitalize mt-3 mb-3 text-danger">{{ user }}'s Profile</h1>
+                        <p>Hi! {{ profile.username }}</p>
+                        <p>Your Email address: {{ profile.email }}</p>
+                        <hr class="mt-3 mb-3">
+                        <div>
+                            <a class="btn btn-danger my-2 my-sm-0 text-uppercase" href="{% url 'logout' %}">Logout</a>
+                            <a class="btn btn-success my-2 my-sm-0 text-uppercase" href="{% url 'more_products' %}">See Our Products </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
