--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -8,41 +8,49 @@
 
 <!-- cart content -->
 {% block content %}
+<div class="mt-5 text-danger text-capitalize">
+    <h1>your shopping list</h1>
+</div>
 <div class="row row-flex">
-    {% for item in cart_items %}
+    <table class="table mt-5">
+  <thead class="btn-secondary mt-3 mb-3">
+    <tr>
+      <th scope="col">Product</th>
+      <th scope="col">Name</th>
+      <th scope="col">Price</th>
+      <th scope="col">Quantity</th>
+      <th scope="col">Change Quantity</th>
+    </tr>
+  </thead>
+  {% for item in cart_items %}
+  <tbody>
+    <tr>
+      <td><div  class="product-image" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div></td>
+      <td>{{ item.product.name }}</td>
+      <td>${{ item.product.price }}</td>
+      <td>{{item.quantity}}</td>
+      <td>
+        <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <label class="sr-only">New Quantity</label>
+                <div class="input-group">
+                    <input name="quantity" type="number" min="0" max="50" class="form-control mr-3">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-secondary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
+        </form>
+      </td>
+    </tr>
+  </tbody>
+  {% endfor %}
+</table>
     
-    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4">
-        
-        <!-- Show all product that only in the cart item -->
-        <div  style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-        
-        <div class="card card-body">
-            <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-            <h3 class="card-title">{{ item.product.name }}</h3>
-            <p class="card-text">${{ item.product.price }}</p>
-            <p class="card-text">Quantity: {{item.quantity}}</p>
-                
-                <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="exampleInputAmount" class="sr-only">New Quantity</label>
-                        <div class="input-group">
-                            <div class="input-group-addon">Enter New Quantity: </div>
-                            <input name="quantity" type="number" min="0" max="50" class="form-control">
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-secondary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
-                </form>
-            </p>
-        </div>
-    </div>
-    {% endfor %}
 </div>
-<hr>
+<hr class="mt-5">
 <!-- Checkout -->
-<div class="row">
+<div class="row mt-5 mb-5">
     <p>Total: <span class="glyphicon glyphicon-euro" aria-hidden="true"></span>${{ total }}</p><br><hr>
-    <a href="{% url 'checkout' %}" class="btn btn-warning" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a></br></hr>
-</div>
-
+    <a href="{% url 'checkout' %}" class="btn btn-warning" role="button"><span class="fn fn-ok-sign" aria-hidden="true"></span>Checkout</a></br></hr>
 {% endblock %}
+</div>
