--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -18,44 +18,52 @@
 {% endblock %}
 
 {% block content %}
+<div class="mt-5 text-danger text-capitalize">
+    <h1>your order summary</h1>
+</div>
 <div class="row row-flex">
-    {% for item in cart_items %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display card">
-            <div class="card-body">
-                <div style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+    <table class="table mt-5">
+  <thead class="btn-secondary mt-3 mb-3">
+    <tr>
+      <th scope="col">Product</th>
+      <th scope="col">Name</th>
+      <th scope="col">Price</th>
+      <th scope="col">Quantity</th>
+    </tr>
+  </thead>
+  {% for item in cart_items %}
+  <tbody>
+    <tr>
+      <td><div  class="product-image" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div></td>
+      <td>{{ item.product.name }}</td>
+      <td>${{ item.product.price }}</td>
+      <td>{{item.quantity}}</td>
+    </tr>
+  </tbody>
+  {% endfor %}
+</table>
+</div>
+<hr>
+<div class="row alert alert-warning">
+    <strong><p>Total:<span aria-hidden="true"></span>${{ total }}</p></strong>
+</div>
+    <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
+        <legend class="text-capitalize mt-5 mb-3">payment details</legend>
 
-                <div class="caption">
-                    <h3>{{ item.product.name }}</h3>
-                    <p>{{ item.quantity }}</p>
-                    <p>{{item.product.price}}</p>
-                </div>
-            </div>
+        <div id="credit-card-errors" style="display: none;">
+            <div id="alert-message block-message error" id="stripe-error-message"></div>
         </div>
-    {% endfor %}
-</div>
-<div class="row">
-    <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-</div>
-
-<form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
-    <legend>Payment Details</legend>
-
-    <div id="credit-card-errors" style="display: none;">
-        <div id="alert-message block-message error" id="stripe-error-message"></div>
-    </div>
-
-    <div class="form-group col-md-6">
-        {{ order_form | as_bootstrap }}
-    </div>
-
-    <div class="form-group col-md-6">
-        {{ payment_form | as_bootstrap }}
-    </div>
-
-    {% csrf_token %}
-    <div class="form-group col-md-12">
-        <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
-    </div>
-</form>
+        <div class="row">
+        <div class="form-group col-sm-10 col-md-8 col-lg-6">
+            {{ order_form | as_bootstrap }}
+        </div>
+        <div class="form-group ol-sm-10 col-md-8 col-lg-6">
+            {{ payment_form | as_bootstrap }}
+        </div>
+        </div>
+        {% csrf_token %}
+        <div class="form-group col-md-12 mt-3 mb-5">
+            <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+        </div>
+    </form>
 {% endblock %}
