--- a/products/templates/more_products.html
+++ b/products/templates/more_products.html
@@ -3,20 +3,27 @@
 {% block title %}Products{% endblock %}
 
 {% block content %}
+<div class="mt-5 text-danger text-capitalize text-center">
+    <h1>all products</h1>
+</div>
+<hr class="red-line mt-3 mb-3">
+<!-- All Product display -->
 <div class="row row-flex">
-    
     {% for product in products %}
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-6 col-lg-4 mt-5">
             <a href='/products/{{ product.slug }}'>
                 <div class="card card-body">
                     <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
-                        <h5 class="card-title">{{ product.name }}</h5>
+                        <h5 class="card-title text-uppercase">{{ product.name }}</h5>
                         <p class="card-text">${{ product.price }}</p>
                 </div>
             </a>
         </div>
      {% endfor %}
-
 </div>
-<hr><a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'products' %}">Go Back <span class="sr-only">(current)</span></a></hr>
+<hr>
+<div class="text-center mt-5 mb-5">
+<a class="btn btn-danger my-2 my-sm-0 text-uppercase" href="{% url 'products' %}">Go Back <span class="sr-only">(current)</span></a>
+</div>
+</hr>
 {% endblock %}
