--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
             <div class="footer-pad">
                 <h4>Support</h4>
                 <ul class="list-unstyled">
-                    <li><a href="#">Contct US</a></li>
+                    <li><a href="{% url 'email' %}">Contct Us</a></li>
                 </ul>
             </div>
         </div>
