App review added, new files and style.
Added review app to allow register users to write a review, and allow for general visitor  to see what our users / customers says about us.

added search_results.html to display the search results.

Changing / added bootstrap 4 classes in html files.

customer style css for body, fa, and footer.

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -12,18 +12,16 @@
         <div class="row m-auto">
             <div class="card card-signin my-5 col-sm-12">
                 <div class="card-body mt-4">
-                    <div class="col-sm-12">
-                        <h5 class="card-title text-center text-uppercase mt-3 mb-3 text-danger">Sign In</h5>
-                        <form class="form-signin" method="POST">
-                            {% csrf_token %}
-                            <p>You must login to view your cart!</p>
-                            {{ login_form | as_bootstrap}}
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-outline-info text-uppercase mt-3 mb-3">Login</button>
-                            </div>
-                        </form>
-                        <p class="mb-4"><a class="text-primary" href="{% url 'password_reset' %}">Forgot Password!</a></p>
-                    </div>
+                    <h5 class="card-title text-center text-uppercase mt-3 mb-3 text-danger">Sign In</h5>
+                    <form class="form-signin" method="POST">
+                        {% csrf_token %}
+                        <p>You must login to view your cart or to add a review!</p>
+                        {{ login_form | as_bootstrap}}
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-outline-info text-uppercase mt-3 mb-3">Login</button>
+                        </div>
+                    </form>
+                    <p class="mb-4"><a class="text-primary" href="{% url 'password_reset' %}">Forgot Password!</a></p>
                 </div>
             </div>
         </div>
