--- a/products/templates/more_products.html
+++ b/products/templates/more_products.html
@@ -15,7 +15,7 @@
                 <div class="card card-body">
                     <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
                         <h5 class="card-title text-uppercase">{{ product.name }}</h5>
-                        <p class="card-text">${{ product.price }}</p>
+                        <p class="card-text fa fa-dollar">{{ product.price }}</p>
                 </div>
             </a>
         </div>
@@ -23,7 +23,7 @@
 </div>
 <hr>
 <div class="text-center mt-5 mb-5">
-<a class="btn btn-danger my-2 my-sm-0 text-uppercase" href="{% url 'products' %}">Go Back <span class="sr-only">(current)</span></a>
+<a class="btn btn-danger my-2 my-sm-0 text-uppercase" href="{% url 'products' %}"><i class="fa fa-backward mr-1"></i>Go Back</a>
 </div>
 </hr>
 {% endblock %}
