--- a/products/templates/product_view.html
+++ b/products/templates/product_view.html
@@ -6,54 +6,44 @@
 
 <!-- product content -->
 {% block content %}
-    <!-- <div class="row row-flex justify-content-center align-items-center mt-5"></div> -->
-
     <!-- Name -->
-    <div class="row">
-        <div class="col-sm-12 col-md-12 align-items-center mt-5 text-uppercase">
-         <h3>{{ product.name }}</h3>
-        </div>
-    </div>
+<div class="row row-flex justify-content-center">
+    <div class="mt-5 col-sm-12 col-md-10 col-lg-10 align-items-center">
+    <h3>{{ product.name }}</h3>
 
-    <!-- image -->
-    <div class="row">
-        <div class="col-sm-12 col-md-4 align-items-left mt-5 mb-5">
+<!-- image -->
+    <div class="align-items-left mt-5 mb-5">
         <div class="product-image-view" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
-        </div>
     </div>
 
-    <!-- Price -->
-    <div class="row">
-        <div class="col-sm-12 col-md-4 align-items-left ">
-            <p><strong>Price: </strong> ${{ product.price }}</p>
-        </div>
-    </div>
-    <hr>
-    
-     <!-- Qty, and add to cart -->
-    <div class="row">
-        <div class="col-sm-10 col-md-6 col-lg-4 align-items-left mb-5">
-         <form method="post" action="{% url 'add_to_cart' product.id %}">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="50" class="form-control quantity" placeholder="Qty">
-                        <span class="input-group-btn">
-                            <button class="btn btn-warning addToCart" type="submit">Add To Cart</button>
-                        </span>
-                    </div>
-                </form>
-        </div>
-    </div>
-
-    <!-- Description -->
-    <div class="row">
-        <div class="col">
-            <p><strong>Description</strong> <br>{{ product.description }}</p>
-        </div>
+<!-- Price -->
+    <div class=" align-items-left ">
+        <p><strong>Price: </strong><span class="fa fa-dollar"></span>{{ product.price }}</p>
     </div>
 <hr>
-<div class=" mt-5 mb-5">
-    <a class="btn btn-success my-2 my-sm-0 text-uppercase" href="{% url 'more_products' %}">browse more<span class="sr-only">(current)</span></a>
+
+<!-- Qty, and add to cart -->
+    <div class="align-items-left col-sm-8 col-md-6 col-lg-4 mb-5">
+    <form method="post" action="{% url 'add_to_cart' product.id %}">
+                {% csrf_token %}
+                <div class="input-group">
+                    <input name="quantity" type="number" min="1" max="50" class="form-control quantity" placeholder="Qty" required>
+                    <span class="input-group-btn">
+                        <button class="btn btn-warning addToCart" type="submit"><i class="fa fa-plus mr-1"></i>Add To Cart</button>
+                    </span>
+                </div>
+            </form>
+    </div>
+
+        <!-- Description -->
+            <div class="col">
+                <p><strong>Description</strong> <br>{{ product.description }}</p>
+            </div>
+    <hr>
+    <div class=" mt-5 mb-5">
+        <a class="btn btn-success my-2 my-sm-0 text-uppercase" href="{% url 'more_products' %}"><i class="fa fa-search-plus mr-1"></i>browse more</a>
+    </div>
+    </hr>
+    </div>
 </div>
-</hr>
 {% endblock %}
