--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
 </head>
 
@@ -27,57 +27,57 @@
             <!-- if user is logged in show Profile and logout-->
             {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'profile' %}"><i class="fa fa-user"></i>Profile</a>
+                <a class="nav-link" href="{% url 'profile' %}"><i class="fa fa-user mr-1"></i>Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>Logout</a>
+                <a class="nav-link" href="{% url 'logout' %}"><i class="fa fa-sign-out mr-1"></i>Logout</a>
             </li>
             <!-- If user is not yet logged in show  Register and Login-->
             {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'registration' %}"><i class="fa fa-user-plus"></i>Register</a>
+                <a class="nav-link" href="{% url 'registration' %}"><i class="fa fa-user-plus mr-1"></i>Register</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}"><i class="fa fa-sign-in"></i>Login</a>
+                <a class="nav-link" href="{% url 'login' %}"><i class="fa fa-sign-in mr-1"></i>Login</a>
             </li>
             {% endif %}
-            <!-- Cart -->
-            <li>
-                <a href="{% url 'view_cart' %}">
-                    <i class="fa fa-shopping-cart"></i>
-                    {% if product_count > 0 %}
-                     <label class="badge badge-warning">{{ product_count }}</label>
-                    {% endif %}
-                </a>   
+            <li class="nav-item">
+                <a class="nav-link" href="/review/{{ review }}"><i class="fa fa-comments mr-1"></i>Reviews</a>
             </li>
             </ul>
             <!-- Search -->
             <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="GET">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search mr-1"></i>Search</button>
             </form>
+            <!-- Cart -->
+            <div class="ml-2 mr-2">
+                <a href="{% url 'view_cart' %}">
+                    <i class="fa fa-shopping-cart">
+                    {% if product_count > 0 %}
+                     <label class="badge badge-warning">{{ product_count }}</label>
+                    {% endif %}
+                    </i>
+                </a>   
+            </div>
         </div>
     </nav>
-         <h1 class="h1">
-            {% block page_heading %}
-            {% endblock %}
-        </h1>
     {% if messages %}
     <div class="alert alert-primary">
         {% for message in messages %} 
             {{ message }} 
         {% endfor %}
-    </div><br>
+    </div>
     {% endif %} 
-    <div class="container">
+    <div class="container-fluid">
     {% block content %}
     <!-- main area for iShop project -->
     {% endblock %}
     </div>
     <!-- Footer: Credit to Namiq Namaz -->
-    <footer class="mainfooter" role="contentinfo">
+    <footer id="footer" class="pt-4" role="contentinfo">
     <div class="footer-middle">
-    <div class="container">
+    <div class="container mt-auto">
         <div class="row">
         <div class="col-md-4 col-sm-6">
             <!--Column1-->
@@ -85,6 +85,7 @@
             <h4>Popular Links</h4>
             <ul class="list-unstyled">
                 <li><a href="{% url 'more_products' %}">All Products</a></li>
+                <li><a href="/review/{{ review }}">Reviews</a></li>
             </ul>
             </div>
         </div>
